--- a/asp_presentaciones/Pages/Ventanas/Empleados_ServiciosExtras.cshtml
+++ b/asp_presentaciones/Pages/Ventanas/Empleados_ServiciosExtras.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model asp_presentacion.Pages.Ventanas.Empleados_ServiciosExtrasModel
 @{
-    ViewData["Titulo"] = "";
+    ViewData["Titulo"] = "Empleados_ServiciosExtras";
 }
 <center>
     <div>
@@ -59,7 +59,7 @@
             @if (Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Editar)
             {
                 <div class="containers_vn panel panel-default">
-                    <h3>Casa</h3>
+                    <h3>Empleados_ServiciosExtras</h3>
 
                     <div>
                         <div class="form-group">
@@ -169,20 +169,23 @@
                 <div class="containers_vn panel panel-default">
                     <table class="tb_data table table-striped table-bordered table-hover">
                         <tr>
-                            <th>
+                            <th class="cl_hidden">
+                                >
                                 Id_Empleado_ServicioExtra
                             </th>
-                            <th>
-                                Nombre
-                            </th>
-                            <th class="cl_hidden">
-                                Telefono
+                            <th class="cl_actions">
+                                Id_empleado
                             </th>
                             <th class="cl_actions">
-                                Dirreccion
+                                Id_ServicioExtra
                             </th>
+                            <th class="cl_actions">
+                                Pago_Servicio
                             <th class="cl_actions">
                                 Accion
+                            </th>
+                            <th class="cl_actions">
+                                Precio_Servicio
                             </th>
                         </tr>
                         @if (Model != null && Model.Lista != null)
@@ -193,7 +196,7 @@
                                     <td>
                                         @elemento.Id_Empleado_ServicioExtra
                                     </td>
-                                    <td>
+                                    <td class="cl_hidden">
                                         @elemento.Id_empleado
                                     </td>
                                     <td class="cl_hidden">
